@@ -2,5 +2,5 @@
 #define AVERSION 3
 #define VERSION "3.10.1"
 #define VSTRING "3101"
-#define DATE    "06 September 2002"
-#define LSMDATE "06Sepl02"
+#define DATE    "14 September 2002"
+#define LSMDATE "14Sep02"
